project horizon gav

--- a/report.html
+++ b/report.html
@@ -1629,22 +1629,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[0,0,1358],[],[[4,0,0,[],[0,1324,33,5],[]]],[],[1,0,1,0]];
+window.output["suite"] = [1,2,3,0,[],[0,0,35763],[],[[4,0,0,[],[0,1752,34009,5],[]]],[],[1,0,1,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*HorizonGav","*c:\\Users\\Stephane\\Desktop\\INFI-GLOBAL-PROJECTS\\TEST-PROJECT-LUCAV2-UI\\Luca.FunctionalTest.E2E.UI\\Particulier\\GammePrevoyance\\HorizonGav.robot","eNrNztEKgjAUgOFXCe+3A16GCWZqxkjJ2f1pHHGkm2xTqKevm96hy5/v5k9wNzoaDtGgJ9oDQL6H3pPz0AVaRjQEJ/LPYBeor2XNKtEcM8HaW3MpctmBLDr5Kyb6PLvHrK9BrAp5uRoVtDU4SfKBF3HBv9SiC1qtkyYHFc4ztY42+0KjCM7W6bc1FW7c2YcNUfqXWwlg+gE1amkO","*Test de Connexion à la Page","*No keyword with name 'Load JSON From File' found."]);
+window.output["strings"] = window.output["strings"].concat(["*","*Parcours-HORIZON-IJ-HOSPITALISATION","*c:\\Users\\Stephane\\Desktop\\INFI-GLOBAL-PROJECTS\\TEST-PROJECT-LUCAV2-UI\\Luca.FunctionalTest.E2E.UI\\Particulier\\GammePrevoyance\\Parcours-HORIZON-IJ-HOSPITALISATION.robot","eNrVjrEKgzAUAH+luMcHjsUK1qqNBCMmduiWhidK1UgSC/372qEf0e2OWy5Wh8Fifwr6ccIjAGRH6BxaB8LjOqgF4YLu6c0KtC4oKRk/p4w0La/yTAqQuZA/I6zL0ltEOgps0yostkX70Sxqkuh8mEd5uKdGWT/qbRrRQqnmGRuLL/NWi8Zv02azjlx5S++8JrTaUTRUpoyKVFJeh9Y8jA+S//qNQSUfK9Z3Gg==","*Test de Connexion à la Page","*QWebElementNotFoundError: Unable to find element for locator Adresse in 10.0 sec"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:00","fail":1,"label":"All Tests","pass":0,"skip":0}],[],[{"elapsed":"00:00:01","fail":1,"id":"s1","label":"HorizonGav","name":"HorizonGav","pass":0,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:34","fail":1,"label":"All Tests","pass":0,"skip":0}],[],[{"elapsed":"00:00:36","fail":1,"id":"s1","label":"Parcours-HORIZON-IJ-HOSPITALISATION","name":"Parcours-HORIZON-IJ-HOSPITALISATION","pass":0,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1701799119437;
+window.output["baseMillis"] = 1701856922569;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 1409;
+window.output["generated"] = 35782;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
