--- a/results/report.html
+++ b/results/report.html
@@ -1629,22 +1629,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[0,0,1319],[[4,5,6,0,[],[0,27,1291],[[7,8,9,0,[],[0,29,1287],[[10,11,12,0,[],[0,35,1279],[[13,14,15,0,[],[0,40,1271],[],[[16,0,0,[],[0,1267,42,17],[]]],[],[1,0,1,0]]],[],[],[1,0,1,0]]],[],[],[1,0,1,0]]],[],[],[1,0,1,0]]],[],[],[1,0,1,0]];
+window.output["suite"] = [1,2,3,0,[],[0,0,39413],[[4,5,6,0,[],[0,32,39379],[[7,8,9,0,[],[0,38,39370],[[10,11,12,0,[],[0,42,39364],[[13,14,15,0,[],[0,46,39357],[],[[16,0,0,[],[0,2064,37337,17],[]]],[],[1,0,1,0]]],[],[],[1,0,1,0]]],[],[],[1,0,1,0]]],[],[],[1,0,1,0]]],[],[],[1,0,1,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*TEST-PROJECT-LUCAV2-UI","*C:\\Users\\Stephane\\Desktop\\INFI-GLOBAL-PROJECTS\\TEST-PROJECT-LUCAV2-UI","*..","*Luca.FunctionalTest.E2E.UI","*C:\\Users\\Stephane\\Desktop\\INFI-GLOBAL-PROJECTS\\TEST-PROJECT-LUCAV2-UI\\Luca.FunctionalTest.E2E.UI","*../Luca.FunctionalTest.E2E.UI","*Particulier","*C:\\Users\\Stephane\\Desktop\\INFI-GLOBAL-PROJECTS\\TEST-PROJECT-LUCAV2-UI\\Luca.FunctionalTest.E2E.UI\\Particulier","*../Luca.FunctionalTest.E2E.UI/Particulier","*GammePrevoyance","*C:\\Users\\Stephane\\Desktop\\INFI-GLOBAL-PROJECTS\\TEST-PROJECT-LUCAV2-UI\\Luca.FunctionalTest.E2E.UI\\Particulier\\GammePrevoyance","*../Luca.FunctionalTest.E2E.UI/Particulier/GammePrevoyance","*HorizonGav","*C:\\Users\\Stephane\\Desktop\\INFI-GLOBAL-PROJECTS\\TEST-PROJECT-LUCAV2-UI\\Luca.FunctionalTest.E2E.UI\\Particulier\\GammePrevoyance\\HorizonGav.robot","*../Luca.FunctionalTest.E2E.UI/Particulier/GammePrevoyance/HorizonGav.robot","*Test de Connexion à la Page","*No keyword with name '${file}= Load JSON From File' found."]);
+window.output["strings"] = window.output["strings"].concat(["*","*TEST-PROJECT-LUCAV2-UI","*C:\\Users\\Stephane\\Desktop\\INFI-GLOBAL-PROJECTS\\TEST-PROJECT-LUCAV2-UI","*..","*Luca.FunctionalTest.E2E.UI","*C:\\Users\\Stephane\\Desktop\\INFI-GLOBAL-PROJECTS\\TEST-PROJECT-LUCAV2-UI\\Luca.FunctionalTest.E2E.UI","*../Luca.FunctionalTest.E2E.UI","*Particulier","*C:\\Users\\Stephane\\Desktop\\INFI-GLOBAL-PROJECTS\\TEST-PROJECT-LUCAV2-UI\\Luca.FunctionalTest.E2E.UI\\Particulier","*../Luca.FunctionalTest.E2E.UI/Particulier","*GammePrevoyance","*C:\\Users\\Stephane\\Desktop\\INFI-GLOBAL-PROJECTS\\TEST-PROJECT-LUCAV2-UI\\Luca.FunctionalTest.E2E.UI\\Particulier\\GammePrevoyance","*../Luca.FunctionalTest.E2E.UI/Particulier/GammePrevoyance","*Parcours-HORIZON-IJ-HOSPITALISATION","*C:\\Users\\Stephane\\Desktop\\INFI-GLOBAL-PROJECTS\\TEST-PROJECT-LUCAV2-UI\\Luca.FunctionalTest.E2E.UI\\Particulier\\GammePrevoyance\\Parcours-HORIZON-IJ-HOSPITALISATION.robot","*../Luca.FunctionalTest.E2E.UI/Particulier/GammePrevoyance/Parcours-HORIZON-IJ-HOSPITALISATION.robot","*Test de Connexion à la Page","*QWebElementNotFoundError: Unable to find element for locator Adresse in 10.0 sec"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:00","fail":1,"label":"All Tests","pass":0,"skip":0}],[],[{"elapsed":"00:00:01","fail":1,"id":"s1","label":"TEST-PROJECT-LUCAV2-UI","name":"TEST-PROJECT-LUCAV2-UI","pass":0,"skip":0},{"elapsed":"00:00:01","fail":1,"id":"s1-s1","label":"TEST-PROJECT-LUCAV2-UI.Luca.FunctionalTest.E2E.UI","name":"Luca.FunctionalTest.E2E.UI","pass":0,"skip":0},{"elapsed":"00:00:01","fail":1,"id":"s1-s1-s1","label":"TEST-PROJECT-LUCAV2-UI.Luca.FunctionalTest.E2E.UI.Particulier","name":"Particulier","pass":0,"skip":0},{"elapsed":"00:00:01","fail":1,"id":"s1-s1-s1-s1","label":"TEST-PROJECT-LUCAV2-UI.Luca.FunctionalTest.E2E.UI.Particulier.GammePrevoyance","name":"GammePrevoyance","pass":0,"skip":0},{"elapsed":"00:00:01","fail":1,"id":"s1-s1-s1-s1-s1","label":"TEST-PROJECT-LUCAV2-UI.Luca.FunctionalTest.E2E.UI.Particulier.GammePrevoyance.HorizonGav","name":"HorizonGav","pass":0,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:37","fail":1,"label":"All Tests","pass":0,"skip":0}],[],[{"elapsed":"00:00:39","fail":1,"id":"s1","label":"TEST-PROJECT-LUCAV2-UI","name":"TEST-PROJECT-LUCAV2-UI","pass":0,"skip":0},{"elapsed":"00:00:39","fail":1,"id":"s1-s1","label":"TEST-PROJECT-LUCAV2-UI.Luca.FunctionalTest.E2E.UI","name":"Luca.FunctionalTest.E2E.UI","pass":0,"skip":0},{"elapsed":"00:00:39","fail":1,"id":"s1-s1-s1","label":"TEST-PROJECT-LUCAV2-UI.Luca.FunctionalTest.E2E.UI.Particulier","name":"Particulier","pass":0,"skip":0},{"elapsed":"00:00:39","fail":1,"id":"s1-s1-s1-s1","label":"TEST-PROJECT-LUCAV2-UI.Luca.FunctionalTest.E2E.UI.Particulier.GammePrevoyance","name":"GammePrevoyance","pass":0,"skip":0},{"elapsed":"00:00:39","fail":1,"id":"s1-s1-s1-s1-s1","label":"TEST-PROJECT-LUCAV2-UI.Luca.FunctionalTest.E2E.UI.Particulier.GammePrevoyance.Parcours-HORIZON-IJ-HOSPITALISATION","name":"Parcours-HORIZON-IJ-HOSPITALISATION","pass":0,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1701799032270;
+window.output["baseMillis"] = 1701855944769;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 1338;
+window.output["generated"] = 39433;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
